@@ -244,6 +244,7 @@ struct task_struct;
 
 #define xnarch_stack_size(tcb)  ((tcb)->stacksize)
 #define xnarch_fpu_ptr(tcb)     ((tcb)->fpup)
+#define xnarch_user_task(tcb)   ((tcb)->user_task)
 
 typedef struct xnarchtcb {	/* Per-thread arch-dependent block */
 
